--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,16 +12,19 @@
     "dev:tailwind": "concurrently \"tailwindcss --input input.css --output tailwind.css --no-autoprefixer --watch\" \"tailwind-rn --watch\""
   },
   "dependencies": {
+    "@expo-google-fonts/montserrat": "^0.2.2",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "@react-navigation/stack": "^6.2.1",
     "axios": "^0.27.2",
     "expo": "~45.0.0",
+    "expo-font": "~10.1.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-global-props": "^1.1.5",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
@@ -32,6 +35,7 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.66.13",
+    "@types/react-native-global-props": "^1.1.1",
     "@types/react-native-material-dropdown": "^0.11.5",
     "concurrently": "^7.1.0",
     "postcss": "^8.4.13",
