fix rohan bad + final stages 2, need to fix icon

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
     "entryPoint": "./src/App.tsx",
-    "name": "frontend",
-    "slug": "frontend",
+    "name": "SenLaw",
+    "slug": "senlaw",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -19,13 +19,17 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.senlaw.senlaw",
+      "buildNumber": "1.0.0"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.senlaw.senlaw",
+      "versionCode": 1
     },
     "web": {
       "favicon": "./assets/favicon.png"
