--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,6 @@
 Flask==2.0.2
 Flask_Cors==3.0.10
 Flask_JWT_Extended==4.4.0
-pymongo==4.1.1
+pymongo[srv]==4.1.1
 python-dotenv==0.20.0
 gunicorn==20.0.4
