--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/montserrat": "^0.2.2",
+    "@expo/webpack-config": "~0.16.2",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
@@ -31,8 +32,7 @@
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7",
     "tailwind-rn": "^4.2.0",
-    "webpack-dev-server": "~3.11.0",
-    "@expo/webpack-config": "~0.16.2"
+    "webpack-dev-server": "~3.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
